--- a/package.json
+++ b/package.json
@@ -7,20 +7,24 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^8.1.0",
     "babel-preset-react-native": "^4.0.0",
+    "firebase": "^5.7.2",
     "native-base": "^2.10.0",
     "react": "16.6.3",
     "react-native": "^0.57.8",
+    "react-native-firebase": "^5.1.1",
     "react-native-gesture-handler": "^1.0.12",
-    "react-native-tab-navigator": "^0.3.4",
-    "react-native-vector-icons": "^6.1.0",
-    "react-navigation": "^2.18.3",
-    "react-navigation-drawer": "^1.0.5"
+    "react-native-ui-kitten": "^3.1.2",
+    "react-navigation": "^2.0.4",
+    "react-navigation-tabs": "^1.0.2",
+    "react-navigator": "0.0.0-0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.51.1",
+    "react-devtools-core": "^3.4.2",
     "react-test-renderer": "16.6.3"
   },
   "jest": {
